[gd_scene load_steps=11 format=3 uid="uid://bysc1kecyeupc"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_sxicq"]
[ext_resource type="PackedScene" uid="uid://ymvkw1qvp52x" path="res://keybind_changer.tscn" id="2_4xjp8"]
[ext_resource type="Texture2D" uid="uid://wmf0pu6iului" path="res://assets/cricket.png" id="2_bwpqr"]

[sub_resource type="InputEventKey" id="InputEventKey_whixt"]
device = -1
keycode = 87
unicode = 119

[sub_resource type="InputEventKey" id="InputEventKey_aw74r"]
device = -1
keycode = 69
unicode = 101

[sub_resource type="InputEventKey" id="InputEventKey_7g4ow"]
device = -1
keycode = 68
unicode = 100

[sub_resource type="InputEventKey" id="InputEventKey_dqgl7"]
device = -1
keycode = 88
unicode = 120

[sub_resource type="InputEventKey" id="InputEventKey_g3ffs"]
device = -1
keycode = 90
unicode = 122

[sub_resource type="InputEventKey" id="InputEventKey_hwsre"]
device = -1
keycode = 65
unicode = 97

[sub_resource type="AtlasTexture" id="AtlasTexture_wotpr"]
atlas = ExtResource("2_bwpqr")
region = Rect2(0, 0, 32, 32)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxicq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftSide" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/LeftSide"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "You are Shinji, a [species] horsehair worm. You hatched inside a Eurasian field cricket... but now you're getting too big. You need to get this cricket into the water, and fast!

Use the keys to move around inside the cricket. Move over nerve ganglia to control the cricket and guide it to water.

[img region=32,0,64,32]res://assets/cricket_tiles_symbols.png[/img] Turn the cricket left or right.

[img region=96,0,32,32]res://assets/cricket_tiles_symbols.png[/img][img region=192,0,32,32]res://assets/cricket_tiles_symbols.png[/img] Turn off or on automatic forward movement. Any other command will also stop the cricket.

[img region=160,0,32,32]res://assets/cricket_tiles_symbols.png[/img] Step forward one square.

[img region=128,0,32,32]res://assets/cricket_tiles_symbols.png[/img] Jump two tiles forward. [img region=32,0,32,32]res://assets/ground.png[/img] can be jumped over, but [img region=0,0,32,32]res://assets/ground.png[/img] cannot.
"

[node name="NWBox" type="HBoxContainer" parent="HBoxContainer/LeftSide"]
layout_mode = 2

[node name="NWBinder" parent="HBoxContainer/LeftSide/NWBox" instance=ExtResource("2_4xjp8")]
layout_mode = 2
text = "NW"
InputActionName = "NW"
InitialBinding = SubResource("InputEventKey_whixt")

[node name="Label" type="Label" parent="HBoxContainer/LeftSide/NWBox"]
layout_mode = 2
text = "Northwest"

[node name="NEBox" type="HBoxContainer" parent="HBoxContainer/LeftSide"]
layout_mode = 2

[node name="NEBinder" parent="HBoxContainer/LeftSide/NEBox" instance=ExtResource("2_4xjp8")]
layout_mode = 2
text = "NE"
InputActionName = "NE"
InitialBinding = SubResource("InputEventKey_aw74r")

[node name="Label" type="Label" parent="HBoxContainer/LeftSide/NEBox"]
layout_mode = 2
text = "Northeast"

[node name="EBox" type="HBoxContainer" parent="HBoxContainer/LeftSide"]
layout_mode = 2

[node name="EBinder" parent="HBoxContainer/LeftSide/EBox" instance=ExtResource("2_4xjp8")]
layout_mode = 2
text = "E"
InputActionName = "E"
InitialBinding = SubResource("InputEventKey_7g4ow")

[node name="Label" type="Label" parent="HBoxContainer/LeftSide/EBox"]
layout_mode = 2
text = "East
"

[node name="SEBox" type="HBoxContainer" parent="HBoxContainer/LeftSide"]
layout_mode = 2

[node name="SEBinder" parent="HBoxContainer/LeftSide/SEBox" instance=ExtResource("2_4xjp8")]
layout_mode = 2
text = "SE"
InputActionName = "SE"
InitialBinding = SubResource("InputEventKey_dqgl7")

[node name="Label" type="Label" parent="HBoxContainer/LeftSide/SEBox"]
layout_mode = 2
text = "Southeast
"

[node name="SWBox" type="HBoxContainer" parent="HBoxContainer/LeftSide"]
layout_mode = 2

[node name="SWBinder" parent="HBoxContainer/LeftSide/SWBox" instance=ExtResource("2_4xjp8")]
layout_mode = 2
text = "SW"
InputActionName = "SW"
InitialBinding = SubResource("InputEventKey_g3ffs")

[node name="Label" type="Label" parent="HBoxContainer/LeftSide/SWBox"]
layout_mode = 2
text = "Southwest"

[node name="WBox" type="HBoxContainer" parent="HBoxContainer/LeftSide"]
layout_mode = 2

[node name="WBinder" parent="HBoxContainer/LeftSide/WBox" instance=ExtResource("2_4xjp8")]
layout_mode = 2
text = "W"
InputActionName = "W"
InitialBinding = SubResource("InputEventKey_hwsre")

[node name="Label" type="Label" parent="HBoxContainer/LeftSide/WBox"]
layout_mode = 2
text = "West"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="RightSide" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChallengeBox" type="HBoxContainer" parent="HBoxContainer/RightSide"]
layout_mode = 2
size_flags_vertical = 3

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/RightSide/ChallengeBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="ChallengeMode" type="Label" parent="HBoxContainer/RightSide/ChallengeBox"]
layout_mode = 2
text = "Challenge Mode (timed movement)"

[node name="ChallengeSpeedBox" type="HBoxContainer" parent="HBoxContainer/RightSide"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChallengeSpeedSlider" type="HSlider" parent="HBoxContainer/RightSide/ChallengeSpeedBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 10.0
value = 1.0
editable = false
tick_count = 10
ticks_on_borders = true

[node name="ChallengeModeSpeed" type="Label" parent="HBoxContainer/RightSide/ChallengeSpeedBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Move Speed (N/A)"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/RightSide"]
layout_mode = 2
size_flags_vertical = 3

[node name="WormTicksBox" type="HBoxContainer" parent="HBoxContainer/RightSide"]
layout_mode = 2
size_flags_vertical = 3

[node name="WormTicksSlider" type="HSlider" parent="HBoxContainer/RightSide/WormTicksBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 10.0
value = 4.0
tick_count = 10
ticks_on_borders = true

[node name="WormTicksLabel" type="Label" parent="HBoxContainer/RightSide/WormTicksBox"]
unique_name_in_owner = true
layout_mode = 2
text = "4 Worm move(s) per cricket move"

[node name="SeedContainer" type="HBoxContainer" parent="HBoxContainer/RightSide"]
layout_mode = 2
size_flags_vertical = 3

[node name="SeedLine" type="SpinBox" parent="HBoxContainer/RightSide/SeedContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 100000.0

[node name="SeedLabel" type="Label" parent="HBoxContainer/RightSide/SeedContainer"]
layout_mode = 2
text = "Random Seed"

[node name="StartGameBox" type="MarginContainer" parent="HBoxContainer/RightSide"]
layout_mode = 2
theme_override_constants/margin_bottom = 32

[node name="StartGame" type="Button" parent="HBoxContainer/RightSide/StartGameBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"
icon = SubResource("AtlasTexture_wotpr")

[connection signal="toggled" from="HBoxContainer/RightSide/ChallengeBox/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="value_changed" from="HBoxContainer/RightSide/ChallengeSpeedBox/ChallengeSpeedSlider" to="." method="_on_challenge_speed_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/RightSide/WormTicksBox/WormTicksSlider" to="." method="_on_worm_ticks_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/RightSide/StartGameBox/StartGame" to="." method="_on_start_game_pressed"]
